// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styleChartWrapper > should style the ChartWrapper component as expected 1`] = `
<DocumentFragment>
  <div
    class="sc-aXZVg iybZny"
  >
    <div
      data-testid="mock component"
    />
  </div>
</DocumentFragment>
`;

exports[`styleChartWrapper should style the ChartWrapper component as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 50px;
}

<div
    class="c0"
  >
    <div
      data-testid="mock component"
    />
  </div>
</DocumentFragment>
`;
